[package]
name = "riaw"
version = "0.1.2"
authors = ["Lance Hepler <lhepler@pacb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "^0.7"
failure = "^0.1"
log = "^0.4"
minifb = { git = "https://github.com/nlhepler/rust_minifb.git", branch = "lh/hidpi" }
rand = "^0.7"
rand_pcg = "^0.2"
rayon = "^1.2"
